<resources>
    <string name="app_name">Pedidos Agua Celica</string>
    <string name="agregar_nuevo_cliente">Agregar Nuevo Cliente</string>
    <string name="buscar">Buscar</string>
    <string name="agregar_pedidos">Agregar Pedidos</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desarrollado_por_xavker">Desarrollado por Xavker</string>
    <string name="agua_purificada_celica_pantalla_de_entrega">Agua Purificada Celica \n Pantalla de Entrega.</string>
    <string name="nombre">Nombre:</string>
    <string name="latitud">Latitud:</string>
    <string name="realizado_pendiente">Realizado / Pendiente</string>
    <string name="celular">celular</string>
    <string name="pendientes">0 Pendientes</string>
    <string name="lat">lat</string>
    <string name="direcci_n">Dirección:</string>
    <string name="longitud">Longitud:</string>
    <string name="celular1">Celular:</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="bidnes_totales">Valor Total Vendido</string>
    <string name="pedido">Pedido</string>
    <string name="fecha">Fecha:</string>
    <string name="entregado_n_pendiente">Entregado \n Pendiente</string>
    <string name="pacas_de_600ml">Pacas de 600ml</string>
    <string name="pacas_de_1000ml">Pacas de 1000ml</string>
    <string name="galones_5_l">Galones 5 l</string>
    <string name="_0">0</string>
    <string name="botellones">Botellones</string>

    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="ubicaci_n">UBICACIÓN</string>
    <string name="_0b">0b</string>
    <string name="textview">TextView</string>
    <string name="lista_de_clientes_actualizada">Cargando Lista de Clientes...</string>

    <string-array name="tipobotellone">
        <item>B Normal</item>
        <item>B Llave</item>
    </string-array>

    <string-array name="preciobotellones">
        <item>1.60</item>
        <item>2.00</item>
        <item>1.50</item>
        <item>1.35</item>
        <item>1.25</item>
        <item>1.00</item>
        <item>0.77</item>
        <item>5.00</item>
        <item>6.00</item>
    </string-array>
    <string-array name="preciop600">
        <item>4.80</item>
        <item>3.00</item>
        <item>2.5</item>

    </string-array>
    <string-array name="barrios">
        <item>Sin dirección</item>
        <item>5 de Septiembre</item>
        <item>9 de Diciembre</item>
        <item>Amazonas</item>
        <item>Centenario</item>
        <item>Central</item>
        <item>Defensa Civil</item>
        <item>Confraternidad</item>
        <item>La Union</item>
        <item>Los Pinos</item>
        <item>Reina del Rosario</item>
        <item>San Vicente</item>
        <item>Sucre</item>
    </string-array>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ingrese_clave_administrador">Ingrese clave administrador</string>
    <string name="baceptar">Aceptar</string>
    <string name="bcancelar">Cancelar</string>
</resources>