<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/nombrea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:minHeight="48dp" />



            <EditText
                android:id="@+id/celulara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="phone"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/direcciona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direcci_n"
                android:textAlignment="textStart"
                tools:ignore="SpeakableTextPresentCheck"
                android:minHeight="48dp" />

            <AutoCompleteTextView
                android:id="@+id/pedidoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nota"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="Botellon"
                        android:textAlignment="textStart"
                        />
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textAlignment="textEnd"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="7">
                    <Button
                        android:id="@+id/buttonBmas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mas"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:id="@+id/botellones"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/buttonBmenos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menos"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView

                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="Botellon de Llave"
                        android:textAlignment="textStart"
                        />
                    <Spinner
                        android:id="@+id/spinnerbll"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textAlignment="textEnd"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="7">
                    <Button
                        android:id="@+id/buttonBllmas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mas"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:id="@+id/botellonesll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/buttonBllmenos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menos"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pacas_de_600ml"
                        android:textSize="16sp" />
                        />
                    <Spinner
                        android:id="@+id/spinnerp600"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textAlignment="textEnd"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="7">
                    <Button
                        android:id="@+id/button600mlmas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mas"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/pacas600"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button600mlmenos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menos"
                        android:textSize="16sp" />
                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/pacas_de_1000ml"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button1000mlmas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mas"
                    android:textSize="16sp" />

                <TextView

                    android:id="@+id/pacas1000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button1000mlmenos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menos"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/galones_5_l"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button5lmas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mas"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/galones"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttongalonesmenos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menos"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="Galones 10  l"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button10lmas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mas"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/galones10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttongalones10menos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menos"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="Total"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/totalpedido"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="34sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/bcancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:text="@string/bcancelar"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/baceptar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:text="@string/baceptar"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.cardview.widget.CardView>